refactor name to MV_INTERSECTION